--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "version": "0.2.6b",
+    "version": "0.2.7-b",
     "name": "sender",
     "scripts": {
         "increase": "node node_modules/vpplus/vpplus.js increase-build"
